# supernova

./: .gitignore  CMakeLists.txt  LICENSE  README.md
engine/: CMakeLists.txt
engine/core/: Action.cpp  Action.h  Bone.cpp  Bone.h  BundleManager.h  Button.cpp  Button.h  CMakeLists.txt  Camera.cpp  Camera.h  ConcreteObject.cpp  ConcreteObject.h  Cube.cpp  Cube.h  DirectionalLight.cpp  DirectionalLight.h  Engine.cpp  Engine.h  Events.cpp  Events.h  Export.h  File.cpp  File.h  Fog.cpp  Fog.h  GUIImage.cpp  GUIImage.h  GUIObject.cpp  GUIObject.h  GraphicObject.cpp  GraphicObject.h  Image.cpp  Image.h  ImageTemplate.cpp  ImageTemplate.h  Input.cpp  Input.h  InputCode.h  InputMap.cpp  InputMap.h  (+81 more)
engine/core/action/: Action.cpp  Action.h  AlphaAction.cpp  AlphaAction.h  Animation.cpp  Animation.h  ColorAction.cpp  ColorAction.h  Ease.cpp  Ease.h  MorphAction.cpp  MorphAction.h  MoveAction.cpp  MoveAction.h  ParticleAccelerationInit.cpp  ParticleAccelerationInit.h  ParticleAlphaInit.h  ParticleColorInit.cpp  ParticleColorInit.h  ParticleMod.cpp  ParticleSizeInit.cpp  ParticleSizeInit.h  ParticleSpriteInit.cpp  ParticleSpriteInit.h  ParticleVelocityInit.cpp  ParticleVelocityMod.cpp  ParticleVelocityMod.h  Particles.cpp  Particles.h  ParticlesAnimation.cpp  ParticlesAnimation.h  PositionAction.cpp  PositionAction.h  RotateAction.cpp  RotateAction.h  RotationAction.cpp  RotationAction.h  ScaleAction.cpp  ScaleAction.h  SpriteAnimation.cpp  (+5 more)
engine/core/audio/: AudioFile.cpp  AudioFile.h  AudioLoader.cpp  AudioLoader.h  AudioPlayer.cpp  AudioPlayer.h  AudioReader.cpp  AudioReader.h  MP3Reader.cpp  MP3Reader.h  OGGReader.cpp  OGGReader.h  OpenalPlayer.cpp  OpenalPlayer.h  SoLoudLoader.cpp  SoLoudLoader.h  SoLoudPlayer.cpp  SoLoudPlayer.h  SoLoudSource.cpp  SoLoudSource.h  SoundManager.cpp  SoundManager.h  WAVReader.cpp  WAVReader.h
engine/core/buffer/: Attribute.cpp  Attribute.h  AttributeBuffer.cpp  AttributeBuffer.h  Buffer.cpp  Buffer.h  ExternalBuffer.cpp  ExternalBuffer.h  IndexBuffer.cpp  IndexBuffer.h  InterleavedBuffer.cpp  InterleavedBuffer.h
engine/core/component/: ActionComponent.h  AlphaActionComponent.h  AnimatedSpriteComponent.h  AnimationComponent.h  AudioComponent.h  Body2DComponent.h  Body3DComponent.h  BoneComponent.h  BundleComponent.h  ButtonComponent.h  CameraComponent.h  ColorActionComponent.h  Contact2DComponent.h  EaseComponent.h  FogComponent.h  ImageComponent.h  InstancedMeshComponent.h  Joint2DComponent.h  Joint3DComponent.h  KeyframeTracksComponent.h  LightComponent.h  LinesComponent.h  MeshComponent.h  MeshPolygonComponent.h  ModelComponent.h  MorphTracksComponent.h  PanelComponent.h  ParticlesAnimationComponent.h  ParticlesComponent.h  PointParticlesComponent.h  PointsComponent.h  PolygonComponent.h  PositionActionComponent.h  RotateTracksComponent.h  RotationActionComponent.h  ScaleActionComponent.h  ScaleTracksComponent.h  ScriptComponent.h  ScrollbarComponent.h  SkyComponent.h  (+13 more)
engine/core/data/: LightData.cpp  LightData.h  PointData.cpp  PointData.h
engine/core/ecs/: ComponentArray.h  ComponentManager.h  Entity.h  EntityManager.h  Signature.h  SubSystem.h
engine/core/file/: Data.cpp  Data.h  File.cpp  File.h  FileData.cpp  FileData.h  FileHandle.cpp  FileHandle.h  FileSystem.cpp  FileSystem.h  UserSettings.h
engine/core/image/: BMPReader.cpp  BMPReader.h  ColorType.h  Image.cpp  Image.h  ImageRead.cpp  ImageRead.h  ImageReader.cpp  ImageReader.h  JPEGRead.cpp  JPEGRead.h  JPEGReader.cpp  JPEGReader.h  PNGRead.cpp  PNGRead.h  PNGReader.cpp  PNGReader.h  RawImage.cpp  RawImage.h  STBImageReader.cpp  STBImageReader.h  TGAReader.cpp  TGAReader.h  TIFFReader.cpp  TIFFReader.h  Texture.cpp  Texture.h  TextureData.cpp  TextureData.h  TextureFile.cpp  TextureFile.h  TextureLoader.cpp  TextureLoader.h  TextureRect.cpp  TextureRect.h
engine/core/io/: Data.cpp  Data.h  File.cpp  File.h  FileData.cpp  FileData.h  SGSReader.cpp  SGSReader.h  UserSettings.cpp  UserSettings.h
engine/core/manager/: BundleManager.cpp  SceneManager.h
engine/core/math/: AABB.cpp  AABB.h  AlignedBoundingBox.cpp  AlignedBoundingBox.h  AlignedBox.cpp  AlignedBox.h  Angle.cpp  Angle.h  BoundingBox.h  Color.cpp  Matrix3.cpp  Matrix3.h  Matrix4.cpp  Matrix4.h  OBB.cpp  OBB.h  Plane.cpp  Plane.h  Quaternion.cpp  Quaternion.h  Ray.cpp  Ray.h  Rect.cpp  Rect.h  Sphere.cpp  Sphere.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h
engine/core/object/: Body2D.cpp  Body2D.h  Bone.cpp  Bone.h  Camera.cpp  Camera.h  EntityHandle.cpp  EntityHandle.h  Light.cpp  Light.h  Lines.cpp  Lines.h  Mesh.cpp  Mesh.h  MeshPolygon.cpp  MeshPolygon.h  Model.cpp  Model.h  Object.cpp  Object.h  Particles.cpp  Particles.h  PlaneTerrain.cpp  PlaneTerrain.h  PointParticles.cpp  PointParticles.h  Points.cpp  Points.h  Polygon.cpp  Polygon.h  Shape.cpp  Shape.h  SkyBox.cpp  SkyBox.h  Sprite.cpp  Sprite.h  Terrain.cpp  Terrain.h  Tilemap.cpp  Tilemap.h
engine/core/physics/: Body.cpp  Body.h  Body2D.cpp  Body2D.h  CollisionShape.cpp  CollisionShape.h  CollisionShape2D.cpp  CollisionShape2D.h  Contact2D.cpp  Contact2D.h  Joint2D.cpp  Joint2D.h  PhysicsWorld.cpp  PhysicsWorld.h  PhysicsWorld2D.cpp  PhysicsWorld2D.h
engine/core/platform/: FileUtilsPlatform.cpp  FileUtilsPlatform.h  Log.cpp  Log.h  SystemPlatform.cpp  (+1 more)
engine/renders/: CMakeLists.txt
engine/shaders/: .gitignore  glsl100.h  glsl300es.h  glsl330.h  glsl410.h  glsl430.h  hlsl5.h  msl21ios.h  msl21macos.h
platform/android/: AndroidJNI.cpp  AndroidJNI.h  AndroidMain.cpp  CMakeLists.txt  NativeEngine.cpp  NativeEngine.h  SupernovaAndroid.cpp  SupernovaAndroid.h
platform/emscripten/: CMakeLists.txt  SupernovaWeb.cpp  SupernovaWeb.h  WebMacros.h  build.py  main.cpp
platform/ios/: CMakeLists.txt  EAGLView.mm  GameViewController.h  GameViewController.mm  IOSMacros.pch  SupernovaIOS.h  SupernovaIOS.mm
project/: CMakeLists.txt  main.cpp
project/lua/: main.lua
workspaces/emscripten/: .gitignore  CMakeLists-lib.txt  CMakeLists.txt  Makefile  SupernovaWeb.cpp  SupernovaWeb.h  build.py  how_compile  main.cpp  web_macros.h
(+1626 files in other folders)
